--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "deploy": "node scripts/deploy-gh-pages.mjs"
   },
   "dependencies": {
+    "@google/genai": "^1.29.1",
+    "framer-motion": "^12.23.24",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "@google/genai": "^1.29.1"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
-    "gh-pages": "^5.0.0",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "gh-pages": "^5.0.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
